--- a/friendsmash_social_persistence_payments/opengraph/coin.html
+++ b/friendsmash_social_persistence_payments/opengraph/coin.html
@@ -5,6 +5,8 @@
   <meta property="og:image" content="http://www.friendsmash.com/images/coin.png" />
   <meta property="og:url" content="http://www.friendsmash.com/opengraph/coin.html" />
   <meta property="og:description" content="Get some coins and buy more lives and bombs!" />
+  <meta property="product:price:amount" content="50"/>
+  <meta property="product:price:currency" content="INR"/>
   <meta property="product:price:amount" content="0.10"/>
   <meta property="product:price:currency" content="USD"/>
   <meta property="product:price:amount" content="0.12"/>
